--- a/YS150.html
+++ b/YS150.html
@@ -100,17 +100,17 @@
 															<div class="dropdown-mega-content">
 																<div class="row">
 																	<div class="col-lg-3">
-																		<span class="dropdown-mega-sub-title">二代無線麥克風</span>
+																		<span class="dropdown-mega-sub-title">二代無線麥克風(發射端)</span>
 																		<ul class="dropdown-mega-sub-nav">
-																			<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
-																			<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+																			<li><a class="dropdown-item" href="YS100.html">YS-100 手持數位無線麥克風</a></li>
+																			<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛數位無線麥克風</a></li>
 																		</ul>
 																	</div>
 																	<div class="col-lg-3">
-																		<span class="dropdown-mega-sub-title">二代無線擴音</span>
+																		<span class="dropdown-mega-sub-title">二代無線擴音(接收端)</span>
 																		<ul class="dropdown-mega-sub-nav">
-																			<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
-																			<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+																			<li><a class="dropdown-item" href="YS200.html">YS-200 智慧音頻主機</a></li>
+																			<li><a class="dropdown-item" href="YS250.html">YS-250 數位無線擴音音箱</a></li>
 																		</ul>
 																	</div>
 																	<div class="col-lg-3">
@@ -126,7 +126,7 @@
 												</li>
 												<li class="dropdown">
 													<a class="dropdown-item dropdown-toggle" href="service.html">
-														技術支援
+														客戶服務
 													</a>
 												</li>
 												<li class="dropdown">
@@ -179,8 +179,8 @@
 					<div class="mb-lg-0 pt-5 pb-5 mt-2">
 						<h2 class="text-center font-weight-extra-bold line-height-7 text-7-8 mb-0" style="color: #0068b7;">YS-150
 							頸掛數位無線麥克風</h2>
-						<p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">全球獨創的頸掛設計與 40g 輕盈的人體工學機身</p>
-						<p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">最大傳輸距離可達10公尺</p>
+						<p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">全球獨創的頸掛穿戴設計</p>
+						<p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">40g 輕盈的人體工學機身</p>
 					</div>
 
 					<div class="row mb-4 pb-4 pt-2" style="align-items: flex-start;">
@@ -209,19 +209,23 @@
 							<ol class="list list-ordened list-ordened-style-2 pl-0">
 								<li class="ys-1">
 									<h4 class="font-weight-semibold text-4 mb-0">海綿套 :</h4>
-									<span class="text-3-4">可水洗 隨時更換。</span>
+									<span class="text-3-4">可水洗 隨時更換</span>
 								</li>
 								<li class="ys-2">
 									<h4 class="font-weight-semibold text-4 mb-0">麥克風軟管 :</h4>
-									<span class="text-3-4">直徑 0.11公分軟管，可 180 定位將麥克風調整至您最適合的位置。</span>
+									<span class="text-3-4">直徑 0.11公分軟管，不阻礙視線。可 180 定位將麥克風定位至您最適合的位置</span>
 								</li>
 								<li class="ys-3">
 									<h4 class="font-weight-semibold text-4 mb-0">超輕量掛頸設計 :</h4>
-									<span class="text-3-4">電源與功能鍵合而為一，以達輕薄短小目的、操作依舊。</span>
+									<span class="text-3-4">頸掛配戴在脖子下緣，輕薄短小工學設計，,如戴項鍊，無負擔</span>
 								</li>
 								<li class="ys-4">
 									<h4 class="font-weight-semibold text-4 mb-0">電源鍵 / 功能鍵 / LED燈號顯示 :</h4>
-									<span class="text-3-4">LED 清晰顯示方式，可輕易了解麥克風狀態。</span>
+									<span class="text-3-4">LED 清晰顯示，可輕易了解麥克風工作狀態</span>
+								</li>
+								<li class="ys-5">
+									<h4 class="font-weight-semibold text-4 mb-0">USB 充電 :</h4>
+									<span class="text-3-4">採用歐盟標準 USB 5V充電，內建鋰電池，輕巧、環保、壽命長</span>
 								</li>
 							</ol>
 							<div class="pro-spec">
@@ -271,28 +275,28 @@
 							<ul class="list list-icons list-primary">
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
-									<h4 class="font-weight-semibold text-4 mb-0">智慧連結 :</h4>
-									<span class="text-3-4">可配對/記憶多個設備，完全不需回工廠設定。</span>
-								</li>
-								<li class="text-quaternary">
-									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">自動連接 :</h4>
-									<span class="text-3-4">免對頻。開機後智慧搜尋，自動對頻 不串音，自動連結立即使用。</span>
+									<span class="text-3-4">免對頻，開機後智慧搜尋，自動連結立即使用一對一連結，保證不串音</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">功率調整 :</h4>
-									<span class="text-3-4">同手機的無線功率動態調整技術；省電，以維護麥克風的擴音品質。</span>
+									<span class="text-3-4">同手機的無線功率動態調整技術，省電，並維護麥克風的擴音品質</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">抗干擾 :</h4>
-									<span class="text-3-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾，一對一連結。</span>
+									<span class="text-3-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾</span>
+								</li>
+								<li class="text-quaternary">
+									<i class="fas fa-check"></i>
+									<h4 class="font-weight-semibold text-4 mb-0">智慧連結 :</h4>
+									<span class="text-3-4">可配對/記憶多個設備，完全不需回工廠設定</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">環境回授 :</h4>
-									<span class="text-3-4">特殊指向麥克風設計，避免環境喇叭聲音的回授。</span>
+									<span class="text-3-4">特殊指向麥克風設計，避免環境喇叭聲音的回授</span>
 								</li>
 							</ul>
 						</div>
@@ -300,23 +304,28 @@
 							<ul class="list list-icons list-primary">
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
+									<h4 class="font-weight-semibold text-4 mb-0">半導體技術開發設計 :</h4>
+									<span class="text-3-4">體積小、重量輕、壽命長，使用時數更長</span>
+								</li>
+								<li class="text-quaternary">
+									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">產品設計 :</h4>
-									<span class="text-3-4">人體工學設計，以使用者便利與外觀為設計理念。</span>
+									<span class="text-3-4">全球唯一以使用者便利與外觀為設計理念，人體工學設計穿戴式麥克風</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">重量 :</h4>
-									<span class="text-3-4">重量 43g。</span>
+									<span class="text-3-4">機身全部僅 40g</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">距離 :</h4>
-									<span class="text-3-4">15 公尺以上。</span>
+									<span class="text-3-4">低功率隱藏式天線，距離25 公尺</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
 									<h4 class="font-weight-semibold text-4 mb-0">使用時間 :</h4>
-									<span class="text-3-4">12hr.；長效鋰電池與加日本電池保護晶片，延長電池壽命。</span>
+									<span class="text-3-4">13小時；長效鋰電池加電池保護晶片，壽命長，無記憶效應</span>
 								</li>
 							</ul>
 						</div>
