--- a/YS200.html
+++ b/YS200.html
@@ -100,17 +100,17 @@
                               <div class="dropdown-mega-content">
                                 <div class="row">
                                   <div class="col-lg-3">
-                                    <span class="dropdown-mega-sub-title">二代無線麥克風</span>
+                                    <span class="dropdown-mega-sub-title">二代無線麥克風(發射端)</span>
                                     <ul class="dropdown-mega-sub-nav">
-                                      <li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
-                                      <li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+                                      <li><a class="dropdown-item" href="YS100.html">YS-100 手持數位無線麥克風</a></li>
+                                      <li><a class="dropdown-item" href="YS150.html">YS-150 頸掛數位無線麥克風</a></li>
                                     </ul>
                                   </div>
                                   <div class="col-lg-3">
-                                    <span class="dropdown-mega-sub-title">二代無線擴音</span>
+                                    <span class="dropdown-mega-sub-title">二代無線擴音(接收端)</span>
                                     <ul class="dropdown-mega-sub-nav">
-                                      <li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
-                                      <li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+                                      <li><a class="dropdown-item" href="YS200.html">YS-200 智慧音頻主機</a></li>
+                                      <li><a class="dropdown-item" href="YS250.html">YS-250 數位無線擴音音箱</a></li>
                                     </ul>
                                   </div>
                                   <div class="col-lg-3">
@@ -126,7 +126,7 @@
                         </li>
                         <li class="dropdown">
                           <a class="dropdown-item dropdown-toggle" href="service.html">
-                            技術支援
+                            客戶服務
                           </a>
                         </li>
                         <li class="dropdown">
@@ -227,25 +227,24 @@
               <ol class="list list-ordened list-ordened-style-2 pl-0">
                 <li class="ys-1">
                   <h4 class="font-weight-semibold text-4 mb-0">堅固 6.3mm 插頭 :</h4>
-                  <span class="text-3-4">可達10,000次插拔不損壞。傳統與特製 L 型插頭，可依設備環境選購。</span>
+                  <span class="text-3-4">可達10,000次插拔不損壞。插頭分傳統與特製 L 型，可依設備環境選購</span>
                 </li>
                 <li class="ys-2">
                   <h4 class="font-weight-semibold text-4 mb-0">特殊線扣設計 :</h4>
-                  <span class="text-3-4">經由電纜線前結插頭與主機，兩端的線扣更加強產品的一體性，增加使用時的彈性，也避免損壞。</span>
+                  <span class="text-3-4">兩端一體性的線扣更強化產品強度 避免因拉扯損壞</span>
                 </li>
                 <li class="ys-3">
                   <h4 class="font-weight-semibold text-4 mb-0">插頭與主機連接電纜 :</h4>
-                  <span class="text-3-4">使產品更適應環境的需要，減少碰撞，易於使用。</span>
+                  <span class="text-3-4">經由電纜線連結插頭與主機，讓主機使用時多了彈性，使產品更適應環境的需要</span>
                 </li>
                 <li class="ys-4">
                   <h4 class="font-weight-semibold text-4 mb-0">電源鍵 / 功能鍵 / LED燈號顯示 :</h4>
-                  <span class="text-3-4">電源與功能鍵合而為一，以達輕薄短小目的、操作依舊。<br>LED
-                    清晰顯示方式，可輕易了解麥克風狀態。</span>
+                  <span class="text-3-4">電源與功能鍵合而為一，以達輕薄短小目的、操作簡單<br>LED 清晰顯示方式 可輕易了解麥克風狀態</span>   
                 </li>
                 </li>
                 <li class="ys-5">
-                  <h4 class="font-weight-semibold text-4 mb-0">一體化 無插座設計 :</h4>
-                  <span class="text-3-4">無外接線，避免接觸不良造成雜音。</span>
+                  <h4 class="font-weight-semibold text-4 mb-0">一體成形，無連接線設計 :</h4>
+                  <span class="text-3-4">無額外的連接線，避免接觸不良造成雜音</span>
                 </li>
               </ol>
             </div>
@@ -267,28 +266,28 @@
               <ul class="list list-icons list-primary">
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
-                  <h4 class="font-weight-semibold text-4 mb-0">智慧連結 :</h4>
-                  <span class="text-3-4">可配對/記憶多個設備，完全不需回工廠設定。</span>
+                  <h4 class="font-weight-semibold text-4 mb-0">自動連接 :</h4>
+                  <span class="text-3-4">免對頻，開機後智慧搜尋，自動連結立即使用一對一連結，保證不串音</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
-                  <h4 class="font-weight-semibold text-4 mb-0">自動連接 :</h4>
-                  <span class="text-3-4">免對頻。開機後智慧搜尋，自動對頻 不串音，自動連結立即使用。</span>
+                  <h4 class="font-weight-semibold text-4 mb-0">功率調整 :</h4>
+                  <span class="text-3-4">同手機的無線功率動態調整技術；省電，並維護麥克風的擴音品質</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">抗干擾 :</h4>
-                  <span class="text-3-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾，一對一連結。</span>
+                  <span class="text-3-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
-                  <h4 class="font-weight-semibold text-4 mb-0">一對一連結 :</h4>
-                  <span class="text-3-4">保證不串音不干擾。</span>
+                  <h4 class="font-weight-semibold text-4 mb-0">手機藍芽 :</h4>
+                  <span class="text-3-4">可與手機配對連結，播放手機內語音素材，多媒體音樂</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
-                  <h4 class="font-weight-semibold text-4 mb-0">外觀 :</h4>
-                  <span class="text-3-4">人體工學設計，強調使用便利與外型美觀。</span>
+                  <h4 class="font-weight-semibold text-4 mb-0">智慧連結 :</h4>
+                  <span class="text-3-4">可配對/記憶多個設備，完全不需回工廠設定</span>
                 </li>
               </ul>
             </div>
@@ -296,23 +295,28 @@
               <ul class="list list-icons list-primary">
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
+                  <h4 class="font-weight-semibold text-4 mb-0">半導體技術開發設計 :</h4>
+                  <span class="text-3-4">體積小、重量輕、壽命長，使用時數更長</span>
+                </li>
+                <li class="text-quaternary">
+                  <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">獨家 L型 麥克風插頭 :</h4>
-                  <span class="text-3-4">特製 L型麥克風插頭可完全避免傳統麥克風插頭突出易被撞擊問題。</span>
+                  <span class="text-3-4">特製 L型麥克風插頭可完全避免傳統麥克風插頭突出易被撞擊問題</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">重量 :</h4>
-                  <span class="text-3-4">重量 40g。</span>
+                  <span class="text-3-4">主機僅重 40g</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">距離 :</h4>
-                  <span class="text-3-4">15 公尺以上。</span>
+                  <span class="text-3-4">低功率隱藏式天線，距離25 公尺</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">使用時間 :</h4>
-                  <span class="text-3-4">20hr.；長效鋰電池與加日本電池保護晶片，延長電池壽命。</span>
+                  <span class="text-3-4">18小時；長效鋰電池加電池保護晶片，壽命長，無記憶效應</span>
                 </li>
               </ul>
             </div>
