--- a/about.html
+++ b/about.html
@@ -94,17 +94,17 @@
 																<div class="dropdown-mega-content">
 																	<div class="row">
 																		<div class="col-lg-3">
-																			<span class="dropdown-mega-sub-title">二代無線麥克風</span>
+																			<span class="dropdown-mega-sub-title">二代無線麥克風(發射端)</span>
 																			<ul class="dropdown-mega-sub-nav">
-																				<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
-																				<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+																				<li><a class="dropdown-item" href="YS100.html">YS-100 手持數位無線麥克風</a></li>
+																				<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛數位無線麥克風</a></li>
 																			</ul>
 																		</div>
 																		<div class="col-lg-3">
-																			<span class="dropdown-mega-sub-title">二代無線擴音</span>
+																			<span class="dropdown-mega-sub-title">二代無線擴音(接收端)</span>
 																			<ul class="dropdown-mega-sub-nav">
-																				<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
-																				<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+																				<li><a class="dropdown-item" href="YS200.html">YS-200 智慧音頻主機</a></li>
+																				<li><a class="dropdown-item" href="YS250.html">YS-250 數位無線擴音音箱</a></li>
 																			</ul>
 																		</div>
 																		<div class="col-lg-3">
@@ -120,7 +120,7 @@
 													</li>
 													<li class="dropdown">
 														<a class="dropdown-item dropdown-toggle" href="service.html">
-															技術支援
+															客戶服務
 														</a>
 													</li>
 													<li class="dropdown">
