--- a/img/service.html
+++ b/img/service.html
@@ -120,7 +120,7 @@
 													</li>
 													<li class="dropdown">
 														<a class="dropdown-item dropdown-toggle active" href="service.html">
-															技術支援
+															客戶服務
 														</a>
 													</li>
 													<li class="dropdown">
@@ -160,7 +160,7 @@
 						</div>
 						<div class="row">
 							<div class="col p-static">
-								<h1 class="text-5 font-weight-extra-bold" data-title-border>技術支援</h1>
+								<h1 class="text-5 font-weight-extra-bold" data-title-border>客戶服務</h1>
 							</div>
 						</div>
 					</div>
