--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
 																<div class="dropdown-mega-content">
 																	<div class="row">
 																		<div class="col-lg-3">
-																			<span class="dropdown-mega-sub-title">二代無線麥克風</span>
+																			<span class="dropdown-mega-sub-title">二代無線麥克風(發射端)</span>
 																			<ul class="dropdown-mega-sub-nav">
-																				<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
-																				<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+																				<li><a class="dropdown-item" href="YS100.html">YS-100 手持數位無線麥克風</a></li>
+																				<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛數位無線麥克風</a></li>
 																			</ul>
 																		</div>
 																		<div class="col-lg-3">
-																			<span class="dropdown-mega-sub-title">二代無線擴音</span>
+																			<span class="dropdown-mega-sub-title">二代無線擴音(接收端)</span>
 																			<ul class="dropdown-mega-sub-nav">
-																				<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
-																				<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+																				<li><a class="dropdown-item" href="YS200.html">YS-200 智慧音頻主機</a></li>
+																				<li><a class="dropdown-item" href="YS250.html">YS-250 數位無線擴音音箱</a></li>
 																			</ul>
 																		</div>
 																		<div class="col-lg-3">
@@ -120,7 +120,7 @@
 													</li>
 													<li class="dropdown">
 														<a class="dropdown-item dropdown-toggle" href="service.html">
-															技術支援
+															客戶服務
 														</a>
 													</li>
 													<li class="dropdown">
@@ -172,12 +172,12 @@
                         class="text-4-5 text-color-dark font-weight-bold pl-3 mb-2"
                         data-plugin-animated-letters
                         data-plugin-options="{'startDelay': 600, 'minWindowWidth': 0, 'animationSpeed': 50}"
-                      >人因工程設計 手持 / 穿戴式 無線麥克風</p>
+                      >台灣創新 研發生產</p>
 											<p
                         class="text-4-5 text-color-dark font-weight-bold pl-5 mb-4"
                         data-plugin-animated-letters
                         data-plugin-options="{'startDelay': 1500, 'minWindowWidth': 0, 'animationSpeed': 50}"
-                      >最適合長時間演講使用</p>
+                      >全無線數位麥克風 擴音音箱</p>
 										</div>
 										<div class="col-lg-7 d-lg-block">
 											<div class="position-relative appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="1500" data-plugin-options="{'minWindowWidth': 0}">
@@ -223,10 +223,10 @@
 											<h1 class="text-color-dark font-weight-extra-bold text-8 line-height-1 pt-5 mb-3 appear-animation"
 												data-appear-animation="fadeInLeftShorterPlus" data-appear-animation-delay="500"
 												data-appear-animation-duration="500ms" data-plugin-options="{'minWindowWidth': 0}">免對頻 一對一使用不干擾</h1>
-											<p class="text-4-5 text-color-dark font-weight-bold mb-2" data-plugin-animated-letters
-												data-plugin-options="{'startDelay': 600, 'minWindowWidth': 0, 'animationSpeed': 50}">麥克風間絕對不互相干擾</p>
-											<p class="text-4-5 text-color-dark font-weight-bold mb-4" data-plugin-animated-letters
-												data-plugin-options="{'startDelay': 1500, 'minWindowWidth': 0, 'animationSpeed': 50}">無傳統麥克風對頻困擾</p>
+											<p class="text-4-5 text-color-dark font-weight-bold pl-2 mb-2" data-plugin-animated-letters
+												data-plugin-options="{'startDelay': 600, 'minWindowWidth': 0, 'animationSpeed': 50}">無頻道限制</p>
+											<p class="text-4-5 text-color-dark font-weight-bold pl-5 mb-4" data-plugin-animated-letters
+												data-plugin-options="{'startDelay': 1500, 'minWindowWidth': 0, 'animationSpeed': 50}">無聲音回授</p>
 										</div>
 										<div class="col-lg-7 d-lg-block">
 											<div class="position-relative appear-animation" data-appear-animation="fadeInLeftShorter"
@@ -289,7 +289,7 @@
 									</div>
 									<div class="feature-box-info">
 										<h4 class="font-weight-bold text-4 mb-0">無線傳輸</h4>
-										<p class="text-3-4 mb-3">使用手機最先進無線技術，低幅射、自動對頻、信號穩定、傳輸距離遠、一對一使用不干擾</p>
+										<p class="text-3-4 mb-3">使用最先進手機無線技術，低幅射 自動對頻 信號穩定 傳輸距離遠 一對一使用不干擾</p>
 									</div>
 								</div>
 							</div>
@@ -300,8 +300,7 @@
 									</div>
 									<div class="feature-box-info">
 										<h4 class="font-weight-bold text-4 mb-0">羽量級麥克風</h4>
-										<p class="mb-1">全球最輕巧麥克風/擴音器、麥克風穿戴/手持設計精緻，讓您放開手，防止職業病</p>
-										<p class="text-3-4 mb-3">另有特殊設計避免室內迴音/嘯叫</p>
+										<p class="mb-1">全球最輕巧麥克風/擴音器、穿戴/手持麥克風小巧精緻，讓您放開手，遠離職業病</p>
 									</div>
 								</div>
 							</div>
@@ -312,7 +311,7 @@
 									</div>
 									<div class="feature-box-info">
 										<h4 class="font-weight-bold text-4 mb-0">千里傳音/隨身擴音器</h4>
-										<p class="text-3-4 mb-3">擴音器輕量化革命設計，特殊聲學設計，兼具手機音樂撥放與教學擴音功能(不必再腰掛音箱不離身)</p>
+										<p class="text-3-4 mb-3">擴音器輕量化革命設計，特殊聲學設計，兼具手機音樂播放與教學擴音功能(不再音箱腰掛不離身)</p>
 									</div>
 								</div>
 							</div>
@@ -325,7 +324,7 @@
 									</div>
 									<div class="feature-box-info">
 										<h4 class="font-weight-bold text-4 mb-0">人體工學工業設計</h4>
-										<p class="text-3-4 mb-3">以使用者習慣出發，輕巧舒適為目標，造型強調產品優美質感細緻、操作簡單。手機長效鋰電池，USB充電 省錢又環保</p>
+										<p class="text-3-4 mb-3">以使用者習慣出發，輕巧舒適為目標，造型優美 質感細緻 操作簡單手機長效鋰電池 USB充電 省錢又環保</p>
 									</div>
 								</div>
 							</div>
@@ -489,28 +488,30 @@
 				<div class="modal-dialog modal-lg">
 					<div class="modal-content">
 						<div class="modal-header">
-							<h4 class="modal-title" id="newProductLabel">二代智慧無線麥克風擴音系統</h4>
+							<h4 class="modal-title" id="newProductLabel">數位無線擴音音箱</h4>
 							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 						</div>
 						<div class="modal-body">
 							<div class="row">
 								<div class="media-left media-top col-sm-12  col-md-5" style="padding-bottom:15px">
 									<img src="img/mic.jpg" class="media-object" style="width:100%">
-									<img src="img/logo.jpg" style="width:60px;position: absolute;top:0;left:15px;">
 								</div>
 								<div class="col-sm-12 col-md-7">
 									<div>
 										<h3 class="media-heading" style="font-size: 22px;font-weight: 600;margin-bottom: 0">
-											世界首創採用手機無線技術的</h3>
+											手機藍牙 無線麥克風擴音音箱來了!</h3>
 									</div>
 									<h3 style="color:#86ae3c;margin:15px 0 13px 0;font-size: 20px;font-weight: 500;">
-										"二代智慧無線麥克風擴音系統"
+										台灣開發設計製造 YS-250 首發上市<br>
+										(兼容現有二代麥克風)
 									</h3>
 									<p style="margin:10px 0 13px 0;font-size: 15px;font-weight: 500">
-										<span style="color:#999999;"">最新產品介紹與規格，請點擊</span><br>
-										<a href="YS100.html"><span>產品介紹</span></a> 或
-											<a href=" https://www.youtube.com/channel/UCmDc3tKSyBSYxPnci35Jy-Q" target="_blank"><span>Youtube
-													頻道</span></a>
+										<span style="color:#999999;">最新產品介紹與規格，請點擊</span>
+										<br>
+										<a href="YS250.html"><span>產品介紹</span></a> 或
+										<a href=" https://www.youtube.com/channel/UCmDc3tKSyBSYxPnci35Jy-Q" target="_blank">
+											<span>Youtube 頻道</span>
+										</a>
 									</p>
 									<p style="margin:5px 0 13px 0;font-size: 15px;font-weight: 500">
 										臉書
