--- a/shop.html
+++ b/shop.html
@@ -94,17 +94,17 @@
 																<div class="dropdown-mega-content">
 																	<div class="row">
 																		<div class="col-lg-3">
-																			<span class="dropdown-mega-sub-title">二代無線麥克風</span>
+																			<span class="dropdown-mega-sub-title">二代無線麥克風(發射端)</span>
 																			<ul class="dropdown-mega-sub-nav">
-																				<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
-																				<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+																				<li><a class="dropdown-item" href="YS100.html">YS-100 手持數位無線麥克風</a></li>
+																				<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛數位無線麥克風</a></li>
 																			</ul>
 																		</div>
 																		<div class="col-lg-3">
-																			<span class="dropdown-mega-sub-title">二代無線擴音</span>
+																			<span class="dropdown-mega-sub-title">二代無線擴音(接收端)</span>
 																			<ul class="dropdown-mega-sub-nav">
-																				<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
-																				<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+																				<li><a class="dropdown-item" href="YS200.html">YS-200 智慧音頻主機</a></li>
+																				<li><a class="dropdown-item" href="YS250.html">YS-250 數位無線擴音音箱</a></li>
 																			</ul>
 																		</div>
 																		<div class="col-lg-3">
@@ -120,7 +120,7 @@
 													</li>
 													<li class="dropdown">
 														<a class="dropdown-item dropdown-toggle" href="service.html">
-															技術支援
+															客戶服務
 														</a>
 													</li>
 													<li class="dropdown">
@@ -168,20 +168,41 @@
 
 				<div class="container py-4">
 				  <div class="row">
-				    <div class="col my-5">
-				      <p class="line-height-7 text-3-4 mb-2 mt-3">我們是新創公司，且教育界通路特殊，目前產品是用網路方式做行銷，奇摩、露天、蝦皮平台都有銷售，產品銷售也都有7天鑑賞期。</p>
-              <p class="line-height-7 text-3-4 mb-5">若有團購、學校採購或其他任何問題， 請致電或 Line, FB 跟我們公司連絡或確認。</p>
-              <div class="card border-radius-0 bg-color-light border-0 box-shadow-1">
-                <div class="card-body">
-                  <a href="https://tw.bid.yahoo.com/booth/Y5571533139?bfe=1"
-                    target="_blank"><img src="img/sales/sale-yahoo.png"></a>
-                  <a href="http://class.ruten.com.tw/user/index00.php?s=youngtone"
-                    target="_blank"><img src="img/sales/sale-ruten.png"></a>
-                  <a href="https://shopee.tw/youngtone" target="_blank"><img
-                      src="img/sales/sale-shopee.png"></a>
-                </div>
+				    <div class="col mb-5">
+				      <p class="line-height-7 text-3-4 mb-2 mt-3">我們是新創公司，目前產品是用網路方式做行銷，奇摩、露天、蝦皮平台都有銷售，產品銷售也都有7天鑑賞期。</p>
+              <p class="line-height-7 text-3-4 mb-3">若有團購、學校採購或其他任何問題， 請致電或 Line, FB 跟我們公司連絡或確認。</p>
+              <div class="shop__group">
+              	<a href="https://shopee.tw/youngtone" target="_blank">
+              		<img src="img/sales/sale-shopee.png">
+              	</a>
+								<a href="http://class.ruten.com.tw/user/index00.php?s=youngtone" target="_blank">
+									<img src="img/sales/sale-ruten.png">
+								</a>
+								<a href="https://tw.bid.yahoo.com/booth/Y5571533139?bfe=1" target="_blank">
+									<img src="img/sales/sale-yahoo.png">
+								</a>
               </div>
-              <p class="line-height-7 text-danger text-3-4 mb-5 mt-3">※ 我們提供的價格都已含運費</p>
+              <h2 class="font-weight-extra-bold text-5 mb-2">
+              	展售實體店家
+              </h2>
+							<p class="line-height-7 text-3-4 mb-3">下列為銷售養聲堂無線擴音產品之實體店家，展售以無線麥克風(YS-100,
+								YS-150)，無線擴音音箱(YS-250)為主，欲前往店面購買時請先撥電話詢問有無現貨，以免向隅。</p>
+							<p class="line-height-7 text-3-4 mb-3">若您所在的縣市尚無銷售店家，有無線音頻主機(YS-200) 套件之需求, 或有產品技術或維修事宜, 請來電(02)2395-5780養聲堂科技，或從Line , Facebook頁面向我們聯繫購買事宜。謝謝您！</p>
+
+							<p class="line-height-7 text-4 mb-3 font-weight-extra-bold text-primary">台北市</p>
+							<p class="line-height-7 text-4 mb-3">
+							<span class="font-weight-extra-bold">欣晟電器</span><br>
+							台北市中正區延平南路13號之1(博愛路及開封街口)<br>
+							營業時間 : 週一至週五10:00~18:00，周六12:00~18:00<br>
+							電話： 02-23610008</p>
+
+							<p class="line-height-7 text-4 mb-3 font-weight-extra-bold text-primary">桃園市</p>
+							<p class="line-height-7 text-4 mb-3">
+							<span class="font-weight-extra-bold">小天使水果店</span><br>
+							330桃園市桃園區南華街133號<br>
+							營業時間 : 07:00~18:00 (周一 & 國定假日休息)<br>
+							電話：0932200672 林先生 (養聲堂聲學顧問)</p>
+
               
 
 				      
