--- a/YS250.html
+++ b/YS250.html
@@ -100,17 +100,17 @@
                               <div class="dropdown-mega-content">
                                 <div class="row">
                                   <div class="col-lg-3">
-                                    <span class="dropdown-mega-sub-title">二代無線麥克風</span>
+                                    <span class="dropdown-mega-sub-title">二代無線麥克風(發射端)</span>
                                     <ul class="dropdown-mega-sub-nav">
-                                      <li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
-                                      <li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+                                      <li><a class="dropdown-item" href="YS100.html">YS-100 手持數位無線麥克風</a></li>
+                                      <li><a class="dropdown-item" href="YS150.html">YS-150 頸掛數位無線麥克風</a></li>
                                     </ul>
                                   </div>
                                   <div class="col-lg-3">
-                                    <span class="dropdown-mega-sub-title">二代無線擴音</span>
+                                    <span class="dropdown-mega-sub-title">二代無線擴音(接收端)</span>
                                     <ul class="dropdown-mega-sub-nav">
-                                      <li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
-                                      <li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+                                      <li><a class="dropdown-item" href="YS200.html">YS-200 智慧音頻主機</a></li>
+                                      <li><a class="dropdown-item" href="YS250.html">YS-250 數位無線擴音音箱</a></li>
                                     </ul>
                                   </div>
                                   <div class="col-lg-3">
@@ -126,7 +126,7 @@
                         </li>
                         <li class="dropdown">
                           <a class="dropdown-item dropdown-toggle" href="service.html">
-                            技術支援
+                            客戶服務
                           </a>
                         </li>
                         <li class="dropdown">
@@ -181,7 +181,7 @@
               數位無線擴音音箱
             </h2>
             <p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">全世界第一款兼具手機藍牙播放與無線擴音的音箱</p>
-            <p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">重量輕、音質清晰、自動對頻、可邊充邊用</p>
+            <p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">重量輕 音質清晰 自動對頻 可邊充邊用</p>
           </div>
 
           <div class="row mb-4 pb-4 pt-0">
@@ -223,52 +223,51 @@
                   onclick="selectItem('ys-7')">
                   <strong>7</strong>
                 </a>
-              </div>
-              <div class="animated fadeIn appear-animation-visible">
-                <h4 class="text-4 pt-2"><strong>產品規格 ：</strong></h4>
-                <ul class="list list-icons list-dark mt-2">
-                  <li class="mb-1"><i class="fas fa-sparkles top-4"></i> 尺寸 11.8 x 8.2 x 5.8 cm</li>
-                  <li class="mb-1"><i class="fas fa-sparkles top-4"></i> 重量 300g （規格以實際產品為主)</li>
-                  <li class="mb-1"><i class="fas fa-sparkles top-4"></i> 喇叭功率 10W</li>
-                  <li class="mb-1"><i class="fas fa-sparkles top-4"></i> 擴音範圍 7~8米</li>
-                  <li class="mb-1"><i class="fas fa-sparkles top-4"></i> 無線連接距離 20公尺以上(直線)</li>
-                </ul>
+
+                <a style="right: 16%; top: 54%;" class="image-hotspot image-hotspot-primary"
+                  onclick="selectItem('ys-8')">
+                  <strong>8</strong>
+                </a>
               </div>
             </div>
             <div class="col-lg-6 mb-0 mb-lg-0 pt-5">
               <ol class="list list-ordened list-ordened-style-2 pl-0">
                 <li class="ys-1">
                   <h4 class="font-weight-semibold text-4 mb-0">電量顯示按鍵 / 顯示 LED :</h4>
-                  <span class="text-3-4">四階綠色 LED 電量顯示燈，讓您立即知道音箱狀況。<br>採用高效鋰電池，無記憶效應，可以隨時充電 保持高電量。</span>
+                  <span class="text-3-4">四階 LED 電量顯示燈，讓您立即知道音箱電量<br>
+                    高效鋰電池，無記憶效應，可以隨時充電，保持高效率</span>
                 </li>
                 <li class="ys-2">
                   <h4 class="font-weight-semibold text-4 mb-0">音量調整旋鈕 :</h4>
-                  <span class="text-3-4">清晰大方選紐，清楚標示音量位置。</span>
+                  <span class="text-3-4">旋紐手感佳大方，清楚標示音量</span>
                 </li>
                 <li class="ys-3">
                   <h4 class="font-weight-semibold text-4 mb-0">開機鍵 :</h4>
-                  <span class="text-3-4">開機/關機 : 功能鍵按 2 秒。<br>配對 :功能鍵按 5 秒。</span>
+                  <span class="text-3-4">開機/關機 : 功能鍵按 2 秒。<br>配對 :功能鍵按 5 秒</span>
                 </li>
                 <li class="ys-4">
                   <h4 class="font-weight-semibold text-4 mb-0">連線指示燈 :</h4>
-                  <span class="text-3-4">正常連線：藍燈4 秒閃一次。<br>
-                    連線異常：藍燈4 秒閃二次。<br>
-                    配對模式：藍燈長亮。<br>
-                    關機：藍燈閃爍後全滅。</span>
+                  <span class="text-3-4">正常連線：藍燈4 秒閃一次<br>連線異常：藍燈4 秒閃二次</span>
                 </li>
                 <li class="ys-5">
                   <h4 class="font-weight-semibold text-4 mb-0">充電指示燈 :</h4>
-                  <span class="text-3-4">充電中：紅燈長亮/充電完成：藍燈長亮。</span>
+                  <span class="text-3-4">充電中：紅燈長亮<br>
+                    充電完成：藍燈長亮</span>
                 </li>
                 <li class="ys-6">
-                  <h4 class="font-weight-semibold text-4 mb-0">Micro-USB 充電孔 :</h4>
-                  <span class="text-3-4">採用國際標準 USB 電壓. 充電器為 5V 1.2A (安培)充電，不須額外充電頭。搭配特製Y型充電線，可以同時充電麥克風與音箱。</span>
+                  <h4 class="font-weight-semibold text-4 mb-0">USB 充電孔 :</h4>
+                  <span class="text-3-4">採用國際標準 USB 電壓，內建電動車等級高效鋰電池，充電器為 5V 1.2A (安培)，輕巧、環保、壽命長<br>
+                    搭配特製Y型充電線，可以同時充電麥克風與音箱</span>
                 </li>
                 <a name="ys-6"></a>
                 <li class="ys-7">
                   <h4 class="font-weight-semibold text-4 mb-0">吊帶 :</h4>
-                  <span class="text-3-4">傳統背帶採用鐵扣連耶音箱，長期使用會會磨損音箱。我公司設計單眼相機背帶，兼具現代感與保護性。</span>
+                  <span class="text-3-4">傳統鐵扣背帶長期使用會會磨損音箱，我公司特開發類單眼相機背帶，兼顧舒適性，現代感，易背掛與音箱保護</span>
                 </li>
+                <li class="ys-8">
+                  <h4 class="font-weight-semibold text-4 mb-0">(專業版)有線麥克風 :</h4>
+                  <span class="text-3-4">可與無線麥克風擴音混音共用；或同時有線講演搭配手機播放音樂/教材</span>
+                </li>                
               </ol>
               <div class="pro-spec">
                 <ul class="specNote">
@@ -311,12 +310,12 @@
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">音質 :</h4>
-                  <span class="text-3-4">藍牙立體聲 音質清晰 人聲原音重現。</span>
+                  <span class="text-3-4">藍牙立體聲，音質清晰，人聲原音重現</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">外觀/重量 :</h4>
-                  <span class="text-3-4">流線型新潮外觀 體積小巧 只有 300 公克。</span>
+                  <span class="text-3-4">流線外型，新潮外觀，體積小巧，可擺放使用，可以行動攜掛</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
@@ -330,70 +329,59 @@
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
-                  <h4 class="font-weight-semibold text-4 mb-0">高通藍牙晶片 台積電製程，隨開即用 :</h4>
-                  <span class="text-3-4">2秒開機 麥克風/手機立即連線。</span>
-                </li>
-                <li class="text-quaternary">
-                  <i class="fas fa-check"></i>
-                  <h4 class="font-weight-semibold text-4 mb-0">無線 :</h4>
-                  <span class="text-3-4">無耳麥接頭 不會有雜音、除了充電 全部無線。</span>
-                </li>
-                <li class="text-quaternary">
-                  <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">人體工學工業設計 :</h4>
-                  <span class="text-3-4">以使用者習慣出發，輕巧舒適為目標，造型優雅 質感細緻。</span>
+                  <span class="text-3-4">以使用者習慣出發，輕巧舒適為目標，造型優雅，質感細緻</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">電池 :</h4>
-                  <span class="text-3-4">電動車等級Panasonics強效鋰電池，環保 USB 充電。</span>
+                  <span class="text-3-4">電動車等級Panasonics強效鋰電池，環保 USB 充電</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">喇叭 :</h4>
                   <span class="text-3-4">稀有金屬 <span
-                      class="text-success font-weight-semibold text-4">釹鐵硼</span> 磁鐵喇叭積小重量輕 效率高。</span>
+                      class="text-success font-weight-semibold text-4">釹鐵硼</span> 磁鐵喇叭積小，重量輕，效率高。</span>
+                </li>
+                <li class="text-quaternary">
+                  <i class="fas fa-check"></i>
+                  <h4 class="font-weight-semibold text-4 mb-0">擴音功率 :</h4>
+                  <span class="text-3-4">聲音宏亮，擴音範圍涵蓋 10米平方標準教室</span>
                 </li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul class="list list-icons list-primary">
                 <li class="text-quaternary"
-                  data-appear-animation-delay="0">
-                  <i class="fas fa-check"></i>
-                  <h4 class="font-weight-semibold text-4 mb-0">功率 :</h4>
-                  <span class="text-3-4">聲音宏亮 擴音範圍涵蓋 10米學生教室。</span>
-                </li>
-                <li class="text-quaternary"
                   data-appear-animation-delay="300">
                   <i class="fas fa-check"></i>
-                  <h4 class="font-weight-semibold text-4 mb-0">特殊功能 :</h4>
-                  <span class="text-3-4">一個麥克風 兩個音箱同步一起響
-                    <span class="text-success font-weight-semibold text-4">(一麥雙享)</span>。</span>
+                  <h4 class="font-weight-semibold text-4 mb-0">創新技術 / 功能 :</h4>
+                  <span class="text-3-4">一麥雙享 : 一個麥克風 兩個音箱同步一起擴音<br>
+                    邊充邊用 : 電量低時 可邊USB充電邊使用擴音
                 </li>
                 <li class="text-quaternary"
                   data-appear-animation-delay="600">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">距離 :</h4>
-                  <span class="text-3-4">低功率隱藏式天線 距離達 20米以上。</span>
+                  <span class="text-3-4">低功率隱藏式天線，距離25 公尺</span>
                 </li>
                 <li class="text-quaternary"
                   data-appear-animation-delay="1200">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">電量顯示 :</h4>
-                  <span class="text-3-4">4段 LED 電量顯示 簡單明瞭 還可邊充電邊使用。</span>
+                  <span class="text-3-4">4段 LED 電量顯示，簡單明瞭</span>
                 </li>
                 <li class="text-quaternary"
                   data-appear-animation-delay="1500">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">有線麥克風 (旗艦版) :</h4>
-                  <span class="text-3-4">音箱兼具無線擴音與有線麥克風混音共用；或是有線講話+手機無線播放音樂/教材。</span>
+                  <span class="text-3-4">音箱兼具無線擴音與有線麥克風混音共用；或是有線講演+手機播放音樂/教材</span>
                 </li>
                 <li class="text-quaternary"
                   data-appear-animation-delay="1800">
                   <i class="fas fa-check"></i>
-                  <h4 class="font-weight-semibold text-4 mb-0">去回授 (旗艦版) :</h4>
-                  <span class="text-3-4">針對有線麥克風另有特殊設計 避免近距離聲音回授 尖叫。</span>
+                  <h4 class="font-weight-semibold text-4 mb-0">去麥克風回授 (專業版) :</h4>
+                  <span class="text-3-4">針對有線麥克風另有特殊設計，避免近距離聲音回授、尖叫</span>
                 </li>
                 <li class="text-quaternary"
                   data-appear-animation-delay="2100">
@@ -401,6 +389,18 @@
                   <h4 class="font-weight-semibold text-4 mb-0">全球獨家 :</h4>
                   <span class="text-3-4">台灣設計、開發、生產，<span class="text-success font-weight-semibold text-4">台灣首發
                       全球獨家</span>。</span>
+                </li>
+                <li class="text-quaternary"
+                  data-appear-animation-delay="2400">
+                  <i class="fas fa-check"></i>
+                  <h4 class="font-weight-semibold text-4 mb-0">產品規格:</h4>
+                  <span class="text-3-4">
+                    1. 尺寸 11.8 x 8.2 x 5.8 cm<br>
+                    2. 重量 299g （規格以實際產品為主)<br>
+                    3. 喇叭功率 10W<br>
+                    4. 擴音範圍 7~8米<br>
+                    5. 無線連接距離 20公尺(直線)<br>
+                  </span>
                 </li>
               </ul>
             </div>
@@ -626,7 +626,7 @@
       })
 
       selectItem = function (y) {
-        const ysData = ['ys-1', 'ys-2', 'ys-3', 'ys-4', 'ys-5', 'ys-6', 'ys-7']
+        const ysData = ['ys-1', 'ys-2', 'ys-3', 'ys-4', 'ys-5', 'ys-6', 'ys-7', 'ys-8']
         for (let item = 1; item <= ysData.length; item++) {
           if (`ys-${item}` === y) {
             $(`.ys-${item}`).addClass("actived");
