--- a/smartMic.html
+++ b/smartMic.html
@@ -133,7 +133,7 @@
 												</li>
 												<li class="dropdown">
 													<a class="dropdown-item dropdown-toggle" href="service.html">
-														技術支援
+														客戶服務
 													</a>
 												</li>
 												<li class="dropdown">
